--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: var(--primary-color);
-    opacity: 0.5;
+    filter: brightness(1.0);
     z-index: -1;
 }
 
